<resources>
    <string name="app_name">Uber</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="trip_time">
        "00:00:00 \n
        trip time"
    </string>
    <string name="trip_time_label">Trip Time</string>
    <string name="rs_label">RS</string>
    <string name="waiting_time_label">Waiting Time</string>
    <string name="distance_km_label">KM</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">Trips History</string>
    <string name="menu_m_notify">Message/ Notification</string>
    <string name="menu_finance">Finance</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
