<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_m_notify"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/menu_m_notify" />
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/menu_finance" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/menu_settings" />
    </group>
    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_launcher_background"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_launcher_background"-->
    <!--android:title="Send"/>-->
    <!--</menu>-->
    <!--</item>-->
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_launcher_background"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>