<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09091a"
    android:fitsSystemWindows="true"
    tools:context="com.example.uber.DriverMapActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/AlertDialog.AppCompat.Light" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:keepScreenOn="true">
            tools:context=".DriverMapActivity">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"

                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="435dp"
                android:layout_height="265dp"
                app:layout_constraintBottom_toTopOf="@+id/drawer_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints,NotSibling" />
            <!--map:layout_constraintEnd_toEndOf="parent"-->
            <!--map:layout_constraintStart_toStartOf="parent"-->
            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="417dp"
                android:layout_height="288dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/totalcost"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/speed"
                    android:layout_width="120dp"
                    android:layout_height="52dp"
                    android:background="#222233"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#C0C0C8"
                    android:textSize="20sp" />
            </FrameLayout>

            <TextView
                android:id="@+id/timerValue"
                android:layout_width="187dp"
                android:layout_height="77dp"


                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:background="#222233"
                android:text="00:00:00"
                android:gravity="center_horizontal"
                android:textColor="#C0C0C8"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/distanceV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_container"
                app:layout_constraintVertical_bias="0.076"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/timerValue2"
                android:layout_width="187dp"
                android:layout_height="77dp"

                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="44dp"
                android:background="#222233"
                android:text="00:00:00"
                android:gravity="center_horizontal"
                android:textColor="#C0C0C8"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/pause"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/start"
                android:layout_width="79dp"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/colorPrimaryDark"
                android:text="START"
                android:textSize="60px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/End"
                android:layout_width="148dp"
                android:layout_height="54dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/end_button"
                android:text="END TRIP"
                android:textColor="#C0C0C8"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/timerValue"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/waiting"
                android:layout_width="148dp"
                android:layout_height="54dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/waiting_button"
                android:text="START WAITING"
                android:textColor="#C0C0C8"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/timerValue"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timerValue2"
                app:layout_constraintVertical_bias="0.975"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/pause"
                android:layout_width="148dp"
                android:layout_height="54dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/waiting_button"
                android:text="STOP WAITING"
                android:textColor="#C0C0C8"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/End"
                app:layout_constraintEnd_toEndOf="@+id/timerValue"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/distanceV"
                android:layout_width="187dp"
                android:layout_height="77dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:background="#222233"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:text="0.0 "
                android:textColor="#C0C0C8"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/timerValue2"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Tripcost"
                android:layout_width="187dp"
                android:layout_height="77dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#222233"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:text="TripCost "
                android:textColor="#C0C0C8"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/Waitingcost"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.153"
                app:layout_constraintStart_toEndOf="@+id/distanceV"
                app:layout_constraintTop_toBottomOf="@+id/totalcost"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Waitingcost"
                android:layout_width="187dp"
                android:layout_height="77dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="44dp"
                android:background="#222233"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:text="WaitingCost "
                android:textColor="#C0C0C8"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/End"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.153"
                app:layout_constraintStart_toEndOf="@+id/timerValue2"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/totalcost"
                android:layout_width="187dp"
                android:layout_height="77dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:background="#222233"
                android:gravity="center_horizontal"
                android:text="TotalCost"
                android:textColor="#C0C0C8"
                android:textSize="30dp"
                app:layout_constraintBottom_toTopOf="@+id/Tripcost"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toEndOf="@+id/timerValue"
                app:layout_constraintTop_toBottomOf="@+id/map" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="99dp"
                android:layout_height="20dp"
                android:text="@string/trip_time_label"
                android:textColor="#1FBAD6"
                app:fontFamily="@font/thanmon"
                app:layout_constraintBottom_toBottomOf="@+id/timerValue"
                app:layout_constraintEnd_toEndOf="@+id/timerValue"
                app:layout_constraintHorizontal_bias="0.613"
                app:layout_constraintStart_toStartOf="@+id/timerValue"
                app:layout_constraintTop_toTopOf="@+id/timerValue"
                app:layout_constraintVertical_bias="0.596" />

            <TextView
                android:id="@+id/textViewTc"
                android:layout_width="99dp"
                android:layout_height="25dp"
                android:gravity="center_horizontal"
                android:text="RS"
                android:textColor="#1FBAD6"
                app:fontFamily="@font/thanmon"
                app:layout_constraintBottom_toBottomOf="@+id/totalcost"
                app:layout_constraintEnd_toEndOf="@+id/totalcost"
                app:layout_constraintHorizontal_bias="0.431"
                app:layout_constraintStart_toStartOf="@+id/totalcost"
                app:layout_constraintTop_toTopOf="@+id/totalcost"
                app:layout_constraintVertical_bias="0.711"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textViewToc"
                android:layout_width="99dp"
                android:layout_height="25dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="RS"
                android:textColor="#1FBAD6"
                app:fontFamily="@font/thanmon"
                app:layout_constraintBottom_toBottomOf="@+id/Waitingcost"
                app:layout_constraintEnd_toEndOf="@+id/Waitingcost"
                app:layout_constraintHorizontal_bias="0.433"
                app:layout_constraintStart_toStartOf="@+id/Waitingcost"
                app:layout_constraintTop_toTopOf="@+id/Waitingcost"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textViewTrc"
                android:layout_width="99dp"
                android:layout_height="25dp"
                android:gravity="center_horizontal"
                android:text="RS"
                android:textColor="#1FBAD6"
                app:fontFamily="@font/thanmon"
                app:layout_constraintBottom_toBottomOf="@+id/Tripcost"
                app:layout_constraintEnd_toEndOf="@+id/Tripcost"
                app:layout_constraintHorizontal_bias="0.433"
                app:layout_constraintStart_toStartOf="@+id/Tripcost"
                app:layout_constraintTop_toTopOf="@+id/Tripcost"
                app:layout_constraintVertical_bias="0.645"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting_time_label"
                android:textColor="#1FBAD6"
                app:fontFamily="@font/thanmon"
                app:layout_constraintBottom_toBottomOf="@+id/timerValue2"
                app:layout_constraintEnd_toEndOf="@+id/timerValue2"
                app:layout_constraintHorizontal_bias="0.524"
                app:layout_constraintStart_toStartOf="@+id/timerValue2"
                app:layout_constraintTop_toTopOf="@+id/timerValue2"
                app:layout_constraintVertical_bias="0.745" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="60dp"
                android:layout_height="19dp"
                android:gravity="center"
                android:text="@string/distance_km_label"
                android:textColor="#1FBAD6"
                android:textSize="20dp"
                app:fontFamily="@font/thanmon"
                app:layout_constraintBottom_toBottomOf="@+id/distanceV"
                app:layout_constraintEnd_toEndOf="@+id/distanceV"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="@+id/distanceV"
                app:layout_constraintTop_toTopOf="@+id/distanceV"
                app:layout_constraintVertical_bias="0.637" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


    <!--<android.support.design.widget.NavigationView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_gravity="start"-->
    <!--android:id="@+id/nav_view"-->
    <!--app:headerLayout="@layout/nav_header_main2"-->
    <!--app:menu="@menu/drawer_menu">-->

    <!--</android.support.design.widget.NavigationView>-->


</android.support.v4.widget.DrawerLayout>